--- a/task2.html
+++ b/task2.html
@@ -25,8 +25,8 @@
         <p>
           Jahanzaib Ali, a dedicated student pursuing a Bachelor's in Computer Science, possesses <br> 
           a keen intellect and a passion for technology. With a thirst for knowledge and a <br>
-          drive to excel,  Jahanzaib consistently demonstrates a strong aptitude for problem-solving <br>
-           and critical thinking. Through coursework and personal projects, Jahanzaib has honed skills <br> 
+          drive to excel,  I consistently demonstrates a strong aptitude for problem-solving <br>
+           and critical thinking. Through coursework and personal projects, I have honed skills <br> 
            in programming languages such as Python, Java, and C++, as well as database management <br>
             and web development. 
         </p>
@@ -42,12 +42,12 @@
         <h2> My Skills </h2>
       </div>
 
-      <div class="box">
+    <div class="box">
         <div class="flip-card">
           <div class="flip-card-inner">
               <div class="flip-card-front">
                   <p class="title">SQL</p>
-                  <p>Hover Me</p>
+                  <p>Card</p>
               </div>
               <div class="flip-card-back">
                   <p class="title"></p>
@@ -60,20 +60,20 @@
         <div class="flip-card-inner">
             <div class="flip-card-front">
                 <p class="title">Java</p>
-                <p>Hover Me</p>
+                <p>Card</p>
             </div>
             <div class="flip-card-back">
                 <p class="title"></p>
                 <p>I can design, develop, and maintain Java-based solutions for diverse platforms and industries.</p>
             </div>
         </div>
-    </div>
+      </div>
 
       <div class="flip-card">
           <div class="flip-card-inner">
               <div class="flip-card-front">
                   <p class="title">Web Development</p>
-                  <p>Hover Me</p>
+                  <p>Card</p>
               </div>
               <div class="flip-card-back">
                   <p class="title"></p>
@@ -81,7 +81,7 @@
               </div>
           </div>
       </div>
-      </div>
+    </div>
     </div>
 
 
